# crawler

./: .gitignore  LICENSE  README.md  pom.xml  test_url.rs
.quarkus/cli/plugins/: quarkus-cli-catalog.json
doctech/: README.md  pom.xml
doctech/src/main/java/org/acme/doctech/model/: CrawlRequest.java  DocProject.java  DocScanner.java
doctech/src/main/java/org/acme/doctech/service/: CrawlService.java  DocCache.java  LocalDocScanner.java
doctech/src/main/java/org/acme/doctech/web/: APIResource.java  DocRouter.java  IndexResource.java
doctech/src/main/resources/: application.properties
doctech/src/main/resources/templates/: crawl.qute.html  index.qute.html
spider/: Cargo.toml  pom.xml
spider/src/: crawler.rs  main.rs  models.rs
src/: crawler.rs  main.rs  models.rs
