[package]
name = "crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.6.1", features = ["derive"]}
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.3", features = ["gzip", "brotli", "deflate", "stream"] }
scraper = "0.27.0"
url = "2.5.8"
anyhow = "1.0.102"
robotstxt = "0.3.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
regex = "1.12.3"
ipnet = "2.11.0"
futures-util = "0.3.31"
